--- a/package.json
+++ b/package.json
@@ -5,24 +5,15 @@
   "author": "mcx",
   "main": "server.js",
   "scripts": {
-    "dev": "node src/server.js",
-    "start": "cross-env NODE_ENV=production node src/server.js",
+    "start": "node src/server.js",
     "build": "rimraf dist && npm run build:client && npm run build:server",
-    "build:client": "cross-env NODE_ENV=production webpack --config config/webpack.config.client.js",
-    "build:server": "cross-env NODE_ENV=production webpack --config config/webpack.config.server.js"
+    "build:client": "webpack --config config/webpack.config.client.js",
+    "build:server": "webpack --config config/webpack.config.server.js"
   },
   "dependencies": {
-    "axios": "^0.18.0",
     "express": "^4.16.3",
-    "jsonp": "^0.2.1",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-helmet": "^5.2.0",
-    "react-redux": "^5.0.7",
-    "react-router-config": "^1.0.0-beta.4",
-    "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "react-dom": "^16.4.2"
   },
   "devDependencies": {
     "autoprefixer": "^9.1.5",
@@ -39,7 +30,6 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "memory-fs": "^0.4.1",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
     "rimraf": "^2.6.2",
@@ -49,8 +39,6 @@
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.1",
     "webpack": "^3.10.0",
-    "webpack-dev-middleware": "^1.12.2",
-    "webpack-hot-middleware": "^2.23.1",
     "webpack-merge": "^4.1.4"
   }
 }
