--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "author": "mcx",
   "main": "server.js",
   "scripts": {
-    "start": "node src/server.js",
+    "dev": "node src/server.js",
+    "start": "cross-env NODE_ENV=production node src/server.js",
     "build": "rimraf dist && npm run build:client && npm run build:server",
-    "build:client": "webpack --config config/webpack.config.client.js",
-    "build:server": "webpack --config config/webpack.config.server.js"
+    "build:client": "cross-env NODE_ENV=production webpack --config config/webpack.config.client.js",
+    "build:server": "cross-env NODE_ENV=production webpack --config config/webpack.config.server.js"
   },
   "dependencies": {
     "express": "^4.16.3",
@@ -30,6 +31,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "memory-fs": "^0.4.1",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
     "rimraf": "^2.6.2",
@@ -39,6 +41,8 @@
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.1",
     "webpack": "^3.10.0",
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-hot-middleware": "^2.23.1",
     "webpack-merge": "^4.1.4"
   }
 }
