--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "express": "^4.16.3",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "react-helmet": "^5.2.0",
+    "react-router-config": "^1.0.0-beta.4",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^9.1.5",
