--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,8 @@
 {
-  "presets": ["env", "react"],
+  "presets": [
+    ["env", { "modules": false }],
+    "react"
+  ],
   "plugins": [
     "loadable-components/babel"
   ]
