--- a/package.json
+++ b/package.json
@@ -26,32 +26,39 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@types/react": "^16.4.18",
+    "@types/react-dom": "^16.0.9",
+    "@types/react-helmet": "^5.0.7",
+    "@types/react-redux": "^6.0.9",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/webpack-env": "^1.13.6",
     "autoprefixer": "^9.1.5",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^9.0.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-dynamic-import-node": "^2.2.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
     "cross-env": "^5.2.0",
-    "css-loader": "^0.28.11",
-    "eslint": "^5.6.0",
-    "eslint-loader": "^2.1.0",
-    "eslint-plugin-react": "^7.11.1",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
+    "fork-ts-checker-webpack-plugin": "^0.4.10",
     "html-webpack-plugin": "^3.2.0",
     "memory-fs": "^0.4.1",
+    "mini-css-extract-plugin": "^0.4.4",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
     "rimraf": "^2.6.2",
     "style-loader": "^0.23.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "ts-loader": "^5.2.2",
+    "tslint": "^5.11.0",
+    "tslint-react": "^3.6.0",
+    "typescript": "^3.1.3",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.1",
-    "webpack": "^3.10.0",
-    "webpack-dev-middleware": "^1.12.2",
+    "webpack": "^4.22.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.4.0",
     "webpack-hot-middleware": "^2.23.1",
     "webpack-merge": "^4.1.4"
   }
