--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
+    "preload-webpack-plugin": "^3.0.0-beta.3",
     "rimraf": "^2.6.2",
     "style-loader": "^0.23.0",
     "stylus": "^0.54.5",
