--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "memory-fs": "^0.4.1",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
+    "preload-webpack-plugin": "^2.3.0",
     "rimraf": "^2.6.2",
     "style-loader": "^0.23.0",
     "stylus": "^0.54.5",
