--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "A react ssr demo",
   "author": "mcx",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "node src/server.js",
-    "start": "cross-env NODE_ENV=production node src/server.js",
+    "dev": "node server/index.js",
+    "start": "cross-env NODE_ENV=production node server/index.js",
     "build": "rimraf dist && npm run build:client && npm run build:server",
     "build:client": "cross-env NODE_ENV=production webpack --config config/webpack.config.client.js",
     "build:server": "cross-env NODE_ENV=production webpack --config config/webpack.config.server.js"
@@ -15,7 +15,6 @@
     "axios": "^0.18.0",
     "express": "^4.16.3",
     "jsonp": "^0.2.1",
-    "loadable-components": "^2.2.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
@@ -36,6 +35,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-dynamic-import-node": "^2.2.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
@@ -47,6 +47,7 @@
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
     "preload-webpack-plugin": "^3.0.0-beta.3",
+    "react-loadable": "^5.5.0",
     "rimraf": "^2.6.2",
     "style-loader": "^0.23.0",
     "stylus": "^0.54.5",
