--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "A react ssr demo",
   "author": "mcx",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "node src/server.js",
-    "start": "cross-env NODE_ENV=production node src/server.js",
+    "dev": "node server/index.js",
+    "start": "cross-env NODE_ENV=production node server/index.js",
     "build": "rimraf dist && npm run build:client && npm run build:server",
     "build:client": "cross-env NODE_ENV=production webpack --config config/webpack.config.client.js",
     "build:server": "cross-env NODE_ENV=production webpack --config config/webpack.config.server.js"
