--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "build:server": "cross-env NODE_ENV=production webpack --config config/webpack.config.server.js"
   },
   "dependencies": {
+    "@loadable/component": "^5.0.1",
+    "@loadable/server": "^5.1.1",
     "axios": "^0.18.0",
     "express": "^4.16.3",
     "jsonp": "^0.2.1",
-    "loadable-components": "^2.2.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
@@ -26,33 +27,35 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "@loadable/babel-plugin": "^5.0.1",
+    "@loadable/webpack-plugin": "^5.0.2",
     "autoprefixer": "^9.1.5",
-    "babel-core": "^6.26.3",
     "babel-eslint": "^9.0.0",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^8.0.4",
     "babel-plugin-dynamic-import-node": "^2.2.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
     "cross-env": "^5.2.0",
-    "css-loader": "^0.28.11",
+    "css-loader": "^1.0.0",
     "eslint": "^5.6.0",
     "eslint-loader": "^2.1.0",
     "eslint-plugin-react": "^7.11.1",
-    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^2.0.0",
-    "html-webpack-plugin": "^3.2.0",
     "memory-fs": "^0.4.1",
+    "mini-css-extract-plugin": "^0.4.4",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
-    "preload-webpack-plugin": "^2.3.0",
     "rimraf": "^2.6.2",
     "style-loader": "^0.23.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.1",
-    "webpack": "^3.10.0",
-    "webpack-dev-middleware": "^1.12.2",
+    "webpack": "^4.22.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.4.0",
     "webpack-hot-middleware": "^2.23.1",
     "webpack-merge": "^4.1.4",
     "webpack-node-externals": "^1.7.2"
