Modifying lazy load libraries :open_mouth:

--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "build:server": "cross-env NODE_ENV=production webpack --config config/webpack.config.server.js"
   },
   "dependencies": {
+    "@babel/core": "^7.1.6",
+    "@loadable/component": "^5.1.2",
+    "@loadable/server": "^5.1.1",
     "axios": "^0.18.0",
+    "babel-loader": "^8.0.4",
     "express": "^4.16.3",
     "jsonp": "^0.2.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
-    "react-loadable": "^5.5.0",
     "react-redux": "^5.0.7",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.3.1",
@@ -26,6 +29,8 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@loadable/babel-plugin": "^5.0.1",
+    "@loadable/webpack-plugin": "^5.0.2",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "@types/react-helmet": "^5.0.7",
@@ -33,21 +38,16 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/webpack-env": "^1.13.6",
     "autoprefixer": "^9.1.5",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
     "babel-plugin-dynamic-import-node": "^2.2.0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "fork-ts-checker-webpack-plugin": "^0.4.10",
-    "html-webpack-plugin": "^3.2.0",
     "memory-fs": "^0.4.1",
     "mini-css-extract-plugin": "^0.4.4",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
-    "preload-webpack-plugin": "^3.0.0-beta.3",
     "rimraf": "^2.6.2",
     "style-loader": "^0.23.0",
     "stylus": "^0.54.5",
